# fineforge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: chat_format.jsonl
fineforge/: __init__.py  cli.py  config.py  dataset.py  evaluator.py  exporter.py  trainer.py
tests/: test_config.py  test_dataset.py  test_evaluator.py  test_exporter.py
